--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -71,6 +71,9 @@ body {
   transition: margin-left .5s;
   &.expanded-mobile {
     margin-left: 80%;
+    header {
+      position: absolute;
+    }
   }
   @include breakpoint (0 $tablet-start) {
     #main {
