--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -9,14 +9,13 @@ body {
   @include breakpoint (0 $tablet-start) {
     padding-top: 0 !important;
     max-width: 100%;
-    overflow: hidden;
   }
 }
 #side-area {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   top: 0;
   left: 0;
   overflow-x: hidden;
@@ -70,7 +69,6 @@ body {
 .viewport {
   transition: margin-left .5s;
   &.expanded-mobile {
-    margin-left: 80%;
     header {
       position: absolute;
     }
@@ -122,7 +120,9 @@ header {
           }
           .navbar-toggler {
             display: block !important;
-            float: left;
+            float: right;
+            position: absolute;
+            right: 20px;
             outline: 0 !important;
             margin-top: 8px;
             background: transparent;
@@ -130,7 +130,6 @@ header {
             -moz-transition: all .2s ease-out;
             -ms-transition: all .2s ease-out;
             transition: all .2s ease-out;
-            position: relative;
             padding: 9px 10px;
             border: 1px solid #ddd;
             border-radius: 4px;
