[YLI-168]: Implemented QA on iphone v2.

--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -123,6 +123,9 @@ body {
 #side-area .top-side {
   padding: 14px 0 7px;
 }
+#side-area .top-side form {
+  padding: 0 15px;
+}
 #side-area a {
   color: #fffffb;
   line-height: 20px;
@@ -156,9 +159,15 @@ body {
   border-radius: 0;
   border-bottom: 1px solid #979797;
 }
+#side-area ul li .dropdown-menu.open li a {
+  white-space: pre-wrap;
+}
 
 .viewport {
   transition: margin-left .5s;
+}
+.viewport.expanded-mobile {
+  height: 100vh;
 }
 .viewport.expanded-mobile header {
   position: absolute;
@@ -225,7 +234,7 @@ header .top-navs .nav-global .navbar-header .navbar-toggler {
     display: block !important;
     float: right;
     position: absolute;
-    right: 20px;
+    right: 15px;
     outline: 0 !important;
     margin-top: 8px;
     background: transparent;
