--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -62,7 +62,7 @@
 <div id="side-area">
   <div class="top-side">
     <form class="clearfix" method="get" action="{{ search_view_content_path }}">
-      <div class="form-group col-xs-12">
+      <div class="form-group">
         <div class="input-group">
           <input type="text" name="search" class="form-control">
         <span class="input-group-btn">
