--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -72,9 +72,9 @@
       </div>
     </form>
     {% if logged_in %}
-      <a class="login-link" href="/user/logout">{{ "Sign Out"|t }}</a>
+      <a class="login-link" href="{{ path('user.logout') }}">{{ "Sign Out"|t }}</a>
     {% else %}
-      <a class="login-link" href="/user/login">{{ "Sign In"|t }}</a>
+      <a class="login-link" href="{{ path('user.login') }}">{{ "Sign In"|t }}</a>
     {% endif %}
   </div>
   {% block mobile_menu %}
@@ -159,9 +159,11 @@
     </div>
   </footer>
 
-  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52"><a href="#top"
-                                                                                  class="btn btn-default"><span
-        class="glyphicon glyphicon-chevron-up"></span></a></div>
+  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52">
+    <a href="#top" class="btn btn-default">
+      <span class="glyphicon glyphicon-chevron-up"></span>
+    </a>
+  </div>
 
   <section class="messages"> {{ page.messages }} </section>
 
@@ -174,8 +176,9 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <span class="modal-close"><i class="glyphicon glyphicon-remove" data-dismiss="modal"
-                                     aria-hidden="true"></i></span>
+        <span class="modal-close">
+          <i class="glyphicon glyphicon-remove" data-dismiss="modal" aria-hidden="true"></i>
+        </span>
         <div id="modal-title" class="modal-title"></div>
       </div>
       <div id="modal-body" class="modal-body"></div>
