[YLI-177]: Styling of single blog post.

--- a/openy_lily/sass/global/_colors.scss
+++ b/openy_lily/sass/global/_colors.scss
@@ -59,6 +59,7 @@ $grey21: #ededed;
 $grey22: #f4f4f4;
 $grey23: #d2d2d2;
 $grey24: #dbdbdb;
+$grey25: #333333;
 
 $black2: #1d1d1b;
 $black3: #434343;
