--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -120,6 +120,7 @@ header {
   top: 0;
   width: 100%;
   z-index: 999;
+  font-family:'Cachet';
   .container-fluid {
     @media (min-width: 1200px) {
       padding-right: 100px;
