--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -21,7 +21,36 @@
 }
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: bold;
+  font-family: 'Cachet', Helvetica, Arial, sans-serif;
+}
+
+h1, .h1 {
+  font-size: 36px;
+}
+
+h2, .h2 {
+  font-size: 30px;
+}
+
+h3, .h3 {
+  font-size: 24px;
+}
+
+h4, .h4 {
+  font-size: 18px;
+}
+
+h5, .h5 {
+  font-size: 14px;
+}
+
+h6, .h6 {
+  font-size: 12px;
 }
 
 .container-fluid {
@@ -54,6 +83,9 @@ body {
   .page-heading h1 {
     font-size: 24px !important;
   }
+}
+.node--type-blog .page-heading {
+  margin-bottom: 40px;
 }
 
 .pager li > a {
@@ -215,6 +247,7 @@ header {
   top: 0;
   width: 100%;
   z-index: 999;
+  font-family: 'Cachet';
 }
 header:after {
   content: "";
@@ -1006,6 +1039,27 @@ body.path-search #block-mainpagecontent li {
 }
 .node--type-blog.node--view-mode-teaser a:hover .inner-wrapper .blog-heading h2:after {
   background: #428bca;
+}
+
+.back-to-blog a {
+  font-family: 'Cachet';
+  text-transform: uppercase;
+}
+
+.node--type-blog.node--view-mode-full {
+  margin: 40px 0;
+}
+
+.copy {
+  color: #333333;
+}
+.copy h2, .copy h3, .copy h4, .copy h5, .copy h6, .copy strong {
+  color: #333333;
+}
+.copy p, .copy li {
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 10px;
 }
 
 .align-left {
@@ -1973,7 +2027,7 @@ body .ajax-progress-throbber .throbber {
   padding-bottom: 0;
 }
 #mindbody-pt-form-wrapper fieldset legend {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
   font-size: 20px;
@@ -2004,7 +2058,7 @@ body .ajax-progress-throbber .throbber {
   position: relative;
 }
 #mindbody-pt-form-wrapper #location-wrapper .fieldset-wrapper .description {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   left: 15px;
   left: 1.5rem;
@@ -2200,7 +2254,7 @@ body .ajax-progress-throbber .throbber {
   padding-top: 70px;
 }
 #mindbody-pt-form-wrapper .form-item-mb-trainer label {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: normal;
   font-size: 20px;
@@ -2245,7 +2299,7 @@ body .ajax-progress-throbber .throbber {
   }
 }
 #mindbody-pt-form-wrapper .form-item-mb-date-range label {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: normal;
   font-size: 20px;
@@ -2305,7 +2359,7 @@ body .ajax-progress-throbber .throbber {
   }
 }
 #mindbody-pt-form-wrapper .form-item-mb-start-time label {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: normal;
   color: #a7a7a7;
@@ -2407,7 +2461,7 @@ body .ajax-progress-throbber .throbber {
   display: none;
 }
 #mindbody-pt-form-wrapper .form-group label {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: normal;
   color: #a7a7a7;
@@ -2646,7 +2700,7 @@ body .ajax-progress-throbber .throbber {
   }
 }
 .mindbody-search-results-content .day .weekday {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
   font-size: 25px;
@@ -2738,7 +2792,7 @@ body .ajax-progress-throbber .throbber {
   margin-bottom: 100px;
 }
 .mindbody-search-results-content .start-again a {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
   border: none;
@@ -2772,7 +2826,7 @@ body .ajax-progress-throbber .throbber {
   }
 }
 .phone-call-wrapper .description {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
   color: #bde6e6;
@@ -2793,7 +2847,7 @@ body .ajax-progress-throbber .throbber {
   }
 }
 .phone-call-wrapper .number {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
   background: url("../img/phone-call-ico.png") no-repeat 0 center;
@@ -3195,7 +3249,7 @@ body.node--type-location #groupex-full-form-wrapper #date-select-wrapper {
   padding-bottom: 1.5rem;
 }
 .groupex-pdf-link-container a {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: normal;
   text-transform: uppercase;
@@ -3720,7 +3774,7 @@ a.sports-icon.floor-hockey {
   line-height: 70px;
   color: #fff;
   width: 182px;
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-weight: bold;
   display: inline-block;
@@ -3955,7 +4009,7 @@ a.sports-icon.floor-hockey {
   }
 }
 .paragraph--type--gallery-cta-content .cta-group-wrapper .cta-group .text {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
   font-size: 18px;
   line-height: 22px;
