--- a/openy_lily/sass/global/_fonts.scss
+++ b/openy_lily/sass/global/_fonts.scss
@@ -1,6 +1,5 @@
-
 @font-face {
-  font-family:'Cachet';
+  font-family: 'Cachet';
   src: url('../fonts/cachetstd-book-webfont.eot');
   src: url('../fonts/cachetstd-book-webfont.eot?#iefix') format('embedded-opentype'),
   url('../fonts/cachetstd-book-webfont.woff') format('woff'),
@@ -10,7 +9,7 @@
 }
 
 @font-face {
-  font-family:'Cachet Bold';
+  font-family: 'Cachet Bold';
   src: url('../fonts/cachetstd-bold-webfont.eot');
   src: url('../fonts/cachetstd-bold-webfont.eot?#iefix') format('embedded-opentype'),
   url('../fonts/cachetstd-bold-webfont.woff') format('woff'),
@@ -20,7 +19,7 @@
 }
 
 @font-face {
-  font-family:'Cachet Medium';
+  font-family: 'Cachet Medium';
   src: url('../fonts/cachetstd-medium-webfont.eot');
   src: url('../fonts/cachetstd-medium-webfont.eot?#iefix') format('embedded-opentype'),
   url('../fonts/cachetstd-medium-webfont.woff') format('woff'),
@@ -30,7 +29,7 @@
 }
 
 @mixin cachet() {
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Cachet", Arial, sans-serif;
   letter-spacing: -0.025em;
 }
 
@@ -46,5 +45,34 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: "Cachet",Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: bold;
+  font-family: 'Cachet', Helvetica, Arial, sans-serif;
+}
+
+h1, .h1 {
+  font-size: 36px
+}
+
+h2, .h2 {
+  font-size: 30px
+}
+
+h3, .h3 {
+  font-size: 24px
+}
+
+h4, .h4 {
+  font-size: 18px
+}
+
+h5, .h5 {
+  font-size: 14px
+}
+
+h6, .h6 {
+  font-size: 12px
 }
