[MInor-Fix][366] Add textfield to the "Small Banner”.
[Minor-Fix][366] Add hook update and test also documentation.

[Minor-Fix][366] Update feature small banner.

Update hook update

Add doc information

[366] Add fix to tests

[366] Fix check for description in template.

[Minor-Fix][366] Fix template.

[Minor-Fix][366] Move to variable description array in template.

--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--small-banner.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--small-banner.html.twig
@@ -46,6 +46,7 @@
   ]
 %}
 {% set color = '#' ~ content.field_prgf_color['#items'].entity.field_color.value %}
+{% set description_text = content.field_prgf_description.0['#text'] %}
 
 <div{{ attributes.addClass(classes) }} style="background-color: {{ color }}">
   <div class="banner-image">
@@ -60,6 +61,11 @@
           <h3 class="banner-title">
             {{ content.field_prgf_headline }}
           </h3>
+          {% if description_text is not empty %}
+            <div class="banner-description">
+              {{ content.field_prgf_description }}
+            </div>
+          {% endif %}
         </div>
       </div>
     </div>
