[YLI-177]: Added sidebar on single blog page.

--- a/openy_lily/templates/node/node--blog--full.html.twig
+++ b/openy_lily/templates/node/node--blog--full.html.twig
@@ -95,12 +95,16 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
         {{ 'Back to Blog'|t }}
       </a>
     </div>
-    <div class="copy col-sm-8 col-md-9">
+    <div class="copy col-sm-6 col-md-7">
       <article{{ attributes.addClass(classes) }}>
         <div{{ content_attributes.addClass('node__content') }}>
           {{ content|without('field_blog_related', 'field_sidebar_content', 'field_blog_image') }}
         </div>
       </article>
+    </div>
+    <div class="col-sm-3 col-md-3">
+      {{ content.field_blog_related }}
+      {{ content.field_sidebar_content }}
     </div>
   </div>
 </div>
