--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -1,4 +1,14 @@
 @font-face {
+  font-family: 'YMCA';
+  src: url(../fonts/YMCA.eot);
+}
+@font-face {
+  font-family: 'YMCA';
+  src: url("../fonts/ymca-normal/ymca-normal.eot?#iefix") format("embedded-opentype"), url("../fonts/ymca-normal/ymca-normal.woff") format("woff"), url("../fonts/ymca-normal/ymca-normal.ttf") format("truetype"), url("../fonts/ymca-normal/ymca-normal#YMCA") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
   font-family: 'Cachet';
   src: url("../fonts/cachetstd-book-webfont.eot");
   src: url("../fonts/cachetstd-book-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/cachetstd-book-webfont.woff") format("woff"), url("../fonts/cachetstd-book-webfont.svg#cachetstd-book-webfont") format("svg");
@@ -1047,7 +1057,7 @@ body.path-search #block-mainpagecontent li {
 }
 
 .node--type-blog.node--view-mode-full {
-  margin: 40px 0;
+  margin: 0 0 40px;
 }
 
 .copy {
@@ -1060,6 +1070,34 @@ body.path-search #block-mainpagecontent li {
   font-size: 14px;
   line-height: 20px;
   margin-bottom: 10px;
+}
+
+.blog-related {
+  background: #e0e0e0;
+  border: none;
+  margin-top: 0;
+}
+.blog-related h3 {
+  color: #5e5e5e;
+  font-weight: bold;
+  font-size: 24px;
+  font-family: 'Cachet',Helvetica,Arial,sans-serif;
+  margin-bottom: 10px;
+}
+.blog-related h2 {
+  margin-top: 0;
+}
+.blog-related h2 a {
+  font-size: 18px;
+  color: #428bca !important;
+}
+.blog-related h2 a:after {
+  margin-left: 10px;
+  position: static;
+  content: 'o';
+  text-transform: none;
+  font-size: 18px;
+  font-family: 'YMCA';
 }
 
 .align-left {
