--- a/openy_lily/sass/global/_fonts.scss
+++ b/openy_lily/sass/global/_fonts.scss
@@ -1,4 +1,21 @@
 @font-face {
+  font-family: 'YMCA';
+  src: url(../fonts/YMCA.eot);
+}
+
+@font-face {
+  font-family: 'YMCA';
+  src:
+      url('../fonts/ymca-normal/ymca-normal.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/ymca-normal/ymca-normal.woff') format('woff'),
+      url('../fonts/ymca-normal/ymca-normal.ttf')  format('truetype'),
+      url('../fonts/ymca-normal/ymca-normal#YMCA') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
   font-family: 'Cachet';
   src: url('../fonts/cachetstd-book-webfont.eot');
   src: url('../fonts/cachetstd-book-webfont.eot?#iefix') format('embedded-opentype'),
