--- a/openy_lily/sass/misc/_blog.scss
+++ b/openy_lily/sass/misc/_blog.scss
@@ -82,7 +82,7 @@
 }
 
 .node--type-blog.node--view-mode-full {
-  margin: 40px 0;
+  margin: 0 0 40px;
 }
 
 .copy {
@@ -94,5 +94,33 @@
     font-size: 14px;
     line-height: 20px;
     margin-bottom: 10px;
+  }
+}
+
+.blog-related {
+  background: #e0e0e0;
+  border: none;
+  margin-top: 0;
+  h3 {
+    color: #5e5e5e;
+    font-weight: bold;
+    font-size: 24px;
+    font-family: 'Cachet',Helvetica,Arial,sans-serif;
+    margin-bottom: 10px;
+  }
+  h2 {
+    margin-top: 0;
+    a {
+      font-size: 18px;
+      color: #428bca !important;
+      &:after {
+        margin-left: 10px;
+        position: static;
+        content: 'o';
+        text-transform: none;
+        font-size: 18px;
+        font-family: 'YMCA';
+      }
+    }
   }
 }
