[OYPD-392] Add class location change logic for popup.

--- a/themes/openy_themes/openy_rose/templates/node/node--branch--class_location.html.twig
+++ b/themes/openy_themes/openy_rose/templates/node/node--branch--class_location.html.twig
@@ -95,6 +95,7 @@
     <h2{{ title_attributes }}>
       <a href="{{ title_url }}" rel="bookmark">{{ label }}</a>
     </h2>
+    <a href="#" class="edit-class-popup hidden">Change</a>
   {% endif %}
   {{ title_suffix }}
 
