[YLI-178]: Styling of 404 page.

--- a/openy_lily/templates/page/page--system--404.html.twig
+++ b/openy_lily/templates/page/page--system--404.html.twig
@@ -111,13 +111,13 @@
       </div>
     </section>
     <section class="content">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12 categories copy">
             <h1>{{ 'Page Not Found'|t }}</h1>
             <article class="richtext">
               <p>{{ 'Sorry. The page you are looking for isn\'t here. You can click anywhere else on our navigation menu and begin once again.'|t }}</p>
-              <p>{{ 'If you want to talk to someone, give us a call at 612-230-YMCA ( <a href="tel:(516) 674-8091">(516) 674-8091</a> ).'|t }}</p>
+              <p>{{ 'If you want to talk to someone, give us a call at 516-674-8091 ( <a href="tel:(516) 674-8091">(516) 674-8091</a> ).'|t }}</p>
             </article>
             <script type="text/javascript">
               /*<![CDATA[*/
@@ -146,9 +146,7 @@
       </div>
     </div>
   </footer>
-
-  <div class="text-center return-to-top" data-spy="affix" data-offset-top="52"><a href="#top" class="btn btn-default"><span class="glyphicon glyphicon-chevron-up"></span></a></div>
-
+  
   <section class="messages"> {{ page.messages }} </section>
 
   <!--googleon: index-->
