--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -74,6 +74,7 @@ h6, .h6 {
 
 .page-heading {
   padding: 30px 0;
+  margin-bottom: 40px;
 }
 .page-heading.black-header {
   background: #434343;
@@ -116,6 +117,17 @@ h6, .h6 {
 }
 .pager li.pager__item--next a:hover {
   background: #eee !important;
+}
+
+.page-404 h2 {
+  color: #646464 !important;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 38px;
+  margin-top: 0;
+}
+.page-404 article {
+  margin-top: 30px;
 }
 
 .toolbar-fixed .navbar-fixed-top {
