--- a/openy_lily/sass/misc/_settings.scss
+++ b/openy_lily/sass/misc/_settings.scss
@@ -7,6 +7,7 @@
 
 .page-heading {
   padding: 30px 0;
+  margin-bottom: 40px;
   &.black-header {
     background: $black3;
     h1 {
@@ -53,4 +54,15 @@
     }
   }
 }
-
+.page-404 {
+  h2 {
+    color: #646464 !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 38px;
+    margin-top: 0;
+  }
+  article {
+    margin-top: 30px;
+  }
+}
