--- a/docroot/themes/custom/ymca/templates/ymca-groupex-form-full.html.twig
+++ b/docroot/themes/custom/ymca/templates/ymca-groupex-form-full.html.twig
@@ -17,7 +17,7 @@
   if (window.ifaddtocalendar == undefined) { window.ifaddtocalendar = 1;
     var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
     s.type = 'text/javascript';s.charset = 'UTF-8';s.async = true;
-    s.src = ('https:' == window.location.protocol ? 'https' : 'http')+'://addtocalendar.com/atc/1.5/atc.min.js';
+    s.src = '{{ atc_src }}';
     var h = d[g]('body')[0];h.appendChild(s); }})();
 </script>
 <form{{ attributes }}>
