--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -4441,4 +4441,66 @@ a.sports-icon.floor-hockey {
   margin: 0 -30px 0 -20px;
 }
 
+.paragraph--type--promo-text {
+  padding: 20px 40px;
+  background: #e5e5e5;
+  border: 0;
+  position: relative;
+  font-weight: 200;
+  line-height: 1.4;
+}
+.paragraph--type--promo-text:before {
+  position: absolute;
+  top: 0;
+  display: block;
+  width: 80%;
+  height: 100%;
+  background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  background-image: -ms-linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  background-image: linear-gradient(rgba(255, 255, 255, 0.43), rgba(255, 255, 255, 0));
+  content: '';
+  left: 45%;
+  -webkit-transform: skew(30deg);
+  -moz-transform: skew(30deg);
+  -ms-transform: skew(30deg);
+  -o-transform: skew(30deg);
+  transform: skew(30deg);
+}
+.paragraph--type--promo-text h2 {
+  color: #5e5e5e;
+  font-weight: bold;
+  font-size: 34px;
+  font-family: 'Cachet',Helvetica,Arial,sans-serif;
+  text-transform: uppercase;
+}
+.paragraph--type--promo-text p {
+  font-size: 21px;
+}
+.paragraph--type--promo-text a {
+  font-weight: bold;
+}
+.paragraph--type--promo-text ul {
+  padding: 0;
+}
+.paragraph--type--promo-text ul li {
+  position: relative;
+  margin: 5px 0;
+  padding-left: 20px;
+  list-style: none;
+}
+.paragraph--type--promo-text ul li:before {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  margin-right: 8px;
+  color: #bebcbc;
+  content: '>';
+  font-family: 'YMCA';
+}
+.paragraph--type--promo-text ul li a {
+  font-weight: bold;
+  font-family: 'Cachet',Helvetica,Arial,sans-serif;
+}
+
 /*# sourceMappingURL=style.css.map */
