--- a/openy_lily/templates/paragraphs/paragraph--promo-text.html.twig
+++ b/openy_lily/templates/paragraphs/paragraph--promo-text.html.twig
@@ -44,10 +44,10 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 <div{{ attributes.addClass(classes) }}>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6 lead left">
+      <div class="col-sm-6 left">
         {{ content.field_description }}
       </div>
-      <div class="col-sm-5 col-sm-offset-1 lead right">
+      <div class="col-sm-5 col-sm-offset-1 right">
         {{ content.field_sidebar }}
       </div>
     </div>
