[YLI-178]: Updated message.

--- a/openy_lily/templates/page/page--system--404.html.twig
+++ b/openy_lily/templates/page/page--system--404.html.twig
@@ -131,7 +131,7 @@
             <h2>{{ 'Page Not Found'|t }}</h2>
             <article class="richtext">
               <p>{{ 'Sorry. The page you are looking for isn\'t here. You can click anywhere else on our navigation menu and begin once again.'|t }}</p>
-              <p>{{ 'If you want to talk to someone, give us a call at 516-674-8091 ( <a href="tel:(516) 674-8091">(516) 674-8091</a> ) otherwise email us at <a href="mailto:otherwise email us at contactus@ymcali.org">contactus@ymcali.org</a>.'|t }}</p>
+              <p>{{ 'If you want to talk to someone, give us a call at 516-674-8091 ( <a href="tel:(516) 674-8091">(516) 674-8091</a> ) otherwise email us at <a href="mailto:contactus@ymcali.org">contactus@ymcali.org</a>.'|t }}</p>
             </article>
             <script type="text/javascript">
               /*<![CDATA[*/
