[YLI-198]: Add blog category on tile on listing page.

--- a/openy_lily/sass/misc/_blog.scss
+++ b/openy_lily/sass/misc/_blog.scss
@@ -8,6 +8,14 @@
       border: none !important;
       .blog-up {
         text-align: center;
+        .category {
+          position: absolute;
+          left: 0;
+          padding: 10px 20px;
+          background-color: rgba(156,31,123,0.75);
+          color: white;
+          font-weight: bold;
+        }
         .field-media-image{
           height: 210px;
         }
