--- a/openy_lily/templates/node/node--blog--teaser.html.twig
+++ b/openy_lily/templates/node/node--blog--teaser.html.twig
@@ -80,7 +80,7 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 node.field_blog_style.value ? 'blog-' ~ node.field_blog_style.value|clean_class : 'blog-story',
 ] %}
 {% set category_default = node.bundle|clean_class|capitalize %}
-{% set category = content.field_blog_category.0 ? content.field_blog_category.0 : category_default|t %}
+{% set category = content.field_blog_category[0]['#title'] ? content.field_blog_category[0]['#title'] : category_default|t %}
 {% set color = 'color: #' ~ content.field_blog_text_color['#items'].entity.field_color.value %}
 {% set bg_color = 'background-color: #' ~ content.field_blog_color['#items'].entity.field_color.value %}
 {% set description %}
@@ -90,8 +90,11 @@ node.field_blog_style.value ? 'blog-' ~ node.field_blog_style.value|clean_class 
   <a href="{{ url }}" rel="bookmark">
     <div class="inner-wrapper">
       <div class="blog-up">
+        <span class="category">
+          {{ category }}
+        </span>
         {% if content.field_blog_image['#field_type'] %}
-        {{ content.field_blog_image }}
+          {{ content.field_blog_image }}
         {% else %}
           <div class="default-img">
             <img src="{{ directory }}/logo.svg">
